# Mephi_PATD_Labs

./: .gitignore  CMakeLists.txt  Default_deque  Segmented_deque  main
Semester_2_Lab_1/: main.c  matrix_4.c  matrix_4.h
Semester_2_Lab_1/files/: output.txt  test.txt
Semester_2_Lab_2/: Lists.h  Tests.cpp  Tests.h  dynamic_array.h  main.cpp  sequence.h
Semester_2_Lab_3/: Matrix_MAS.h  Tests.cpp  Tests.h  dynamic_array.h  main.cpp
Semester_2_Lab_4/: Menu.h  Person.h  Student.h  Teacher.h  Tree.h  main.cpp  main_res.cpp
Semester_2_Lab_5/: Default_deque.cpp  Deque.cpp  Deque.h  Segmented_deque.cpp  main.cpp
Semester_3_HW_1/: Sequence.hpp  ShrdPtr.hpp  UnqPtr.hpp  main.cpp  tests.hpp
Semester_3_Lab_1/: LazySequence.h  Lists.h  OnlineStatistics.h  PerformanceTests.h  Streams.h  TestsStatistics.h  main.cpp
Semester_3_Lab_1/files/: numbers.txt
Semester_3_Lab_2/: AI.cpp  AI.hpp  Board.cpp  Board.hpp  GUI.cpp  GUI.hpp  Tests.cpp  Tests.hpp  main.cpp  sequence.h
Semester_3_Lab_3/: ConnectedComponents.cpp  ConnectedComponents.h  GraphVizSFML.cpp  GraphVizSFML.h  Graphs.h  IGraph.h  LazyGraph.h  Lists.h  Tests_Graph.cpp  Timer.h  dynamic_array.h  main.cpp
Semester_3_Lab_3/graphs_csv/: lab3_times.csv
Semester_3_Lab_Dop/: ast.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  psc  statlib.cpp  statlib.h  tests.cpp  token.h  value.h
Semester_3_Lab_Dop/documentation/: documentation.tex
Semester_3_Lab_Dop/documentation_technical/: technical_documentation.tex
Semester_3_Lab_Dop/documentation_user/: documentation.tex
Semester_3_Lab_Dop/scripts/: demo_basic.psc  demo_cov.psc  demo_if.psc  script1.psc
